--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
     </div>
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://facebook.com/ranasalmanpro"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://twitter.com/RanaSal45906817?t=hcV6fUTdmmhZL0FkmLS4iw&s=09"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><!--<a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a>--><a class="cc-instagram btn btn-link" href="https://instagram.com/ranasalmanpro"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-      <div class="h4 title text-center">Anthony Barnett</div>
+      <div class="h4 title text-center"></div>
       <div class="text-center text-muted">
         <p>&copy; Rana Salman - CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
       </div>
